Fixing missing classes and packages.